CloudConsultingSalesforce/force-app/main/default/objects/Project_Line_Item__c/fields/Hours_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Hours_Assigned__c</fullName>
    <label>Hours Assigned</label>
    <summarizedField>Project_Staff__c.Amount_of_Hours__c</summarizedField>
    <summaryForeignKey>Project_Staff__c.Project_Line_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>