CloudConsultingSalesforce/force-app/main/default/objects/Project_Line_Item__c/fields/Ready__c.field-meta.xml
<CustomField>
    <fullName>Ready__c</fullName>
    <formula>IF(  Quantity__c =   Hours_Assigned__c  ,
     True,
     False
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ready</label>
    <type>Checkbox</type>
</CustomField>