CloudConsultingSalesforce/force-app/main/default/objects/Project_Line_Item__c/fields/UnassignedHours__c.field-meta.xml
<CustomField>
    <fullName>UnassignedHours__c</fullName>
    <formula>Quantity__c -   Hours_Assigned__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UnassignedHours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>