CloudConsultingSalesforce/force-app/main/default/objects/Project_Line_Item__c/fields/UnassignedHoursPer__c.field-meta.xml
<CustomField>
    <fullName>UnassignedHoursPer__c</fullName>
    <formula>(Hours_Assigned__c / Quantity__c )* 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UnassignedHoursPer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>